# NeuRoute

./: .gitignore  LICENSE  README.md  requirements.txt
cpp/bucket_cluster/: bucket_cluster_pipeline_v6_8_1_gt.cpp
cpp/query_pipeline/: CMakeLists.txt  bench_enum_centroid_stage_only_v6_8_aligned.cpp  cfg.example.json  cmake.sh  csr_index_runtime_v3_with_subcsr.h  query_bins_bins_only_v3a_standalone.hpp  resrank_kernels.cpp  resrank_kernels.h  torch_scorer.cpp  torch_scorer.h
paper/: README.md
paper/overleaf/: README.md  references.bib
paper/overleaf/Autohash/: Appendix.tex  Autohash_VLDB2026.tex  NeuRoute_arXiv.tex  appendix_vldb.tex  references.bib
results/: README.md  build_time.csv  neuroute_build_breakdown.csv
results/bigann-100m/: diskann.csv  hnsw.csv  ivfflat.csv  ivfpq.csv  neuroute.csv
results/bigann-1b/: diskann.csv  ivfpq.csv  neuroute.csv  opq_ivfpq_refine.csv
results/deep1b-100m/: diskann.csv  hnsw.csv  ivfflat.csv  ivfpq.csv  neuroute.csv
results/deep1b-1b/: diskann.csv  ivfpq.csv  neuroute.csv  opq_ivfpq_refine.csv
results/gldv2/: diskann.csv  hnsw.csv  ivfflat.csv  ivfpq.csv  neuroute.csv
scripts/: plot_build_time.py
src/: AutoHash_bigann_eu.py  AutoHash_bigann_eu_100m.py  AutoHash_deep1b_eu.py  AutoHash_deep1b_eu_100m.py  AutoHash_image_eu.py  SPHash_base.py  indexing_model_base.py
src/Bigann/: data_preprocessing.py  indexing_model_bigann.py  sample_training_set.py  training_evaluating.py
src/Bigann/config/: experiment_bigann_eu.json
src/Deep1b/: data_format_transfer.py  indexing_model_deep1b.py  training_data_generation.py  training_evaluating.py
src/GLDv2/: indexing_model_image.py  read_gt_only.py  training_evaluating.py
src/retrieval/: make_pipeline_cfg_from_experiment_json_patched_v5.py
src/utils/: config_generation.py  csr_build.py  csr_build_v2.py  evaluate_median_bucket_balance.py  load_any_base.py  pair_dataset_builder.py  pair_dataset_viz.py  tools.py
